--- a/index.html
+++ b/index.html
@@ -539,10 +539,13 @@
 
 								</p>
 							</div>
-							<h3 class="heading"><a href="single.html">Facial Recognition Based Attendance Tracker</a>
+							<h3 class="heading"><a href="https://github.com/Akanksha0401/engage2k22"
+									target="_blank">Facial Recognition Based Attendance Tracker</a>
 							</h3>
-							<p>A small river named Duden flows by their place and supplies it with the necessary
-								regelialia.</p>
+							<p> A web space for online attendance
+								tracking and monitoring of students through facial recognition, and automatically
+								updating the attendance records based on face recognized.
+							</p>
 						</div>
 					</div>
 				</div>
@@ -559,8 +562,9 @@
 							</div>
 							<h3 class="heading"><a href="single.html">Cryptocurrency Tracking and Analysis</a>
 							</h3>
-							<p>A small river named Duden flows by their place and supplies it with the necessary
-								regelialia.</p>
+							<p>A versatile cryptocurrency tracking and analysis app which provides the latest crypto
+								trends as well as provides the individual historical records of past dips and rise in
+								the cryptocurrencies</p>
 						</div>
 					</div>
 				</div>
@@ -575,10 +579,13 @@
 
 								</p>
 							</div>
-							<h3 class="heading"><a href="single.html">AR Based E-commercial WebApp</a>
+							<h3 class="heading"><a
+									href="https://github.com/Akanksha0401/AR-Furniture-E-commerce-website"
+									target="_blank">AR Based E-commercial WebApp</a>
 							</h3>
-							<p>A small river named Duden flows by their place and supplies it with the necessary
-								regelialia.</p>
+							<p>An e-commerce website integrated with AR models
+								of furnitures to allow customers view the selected product in their own room before
+								purchasing, hence increasing the customer shopping experience</p>
 						</div>
 					</div>
 				</div>
@@ -646,7 +653,7 @@
 				<div class="col-md-7 heading-section text-center ftco-animate">
 					<h1 class="big big-2">Contact</h1>
 					<h2 class="mb-4">Contact Me</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+					<p>Get In Touch</p>
 				</div>
 			</div>
 
@@ -657,7 +664,8 @@
 							<span class="icon-map-signs"></span>
 						</div>
 						<h3 class="mb-4">Address</h3>
-						<p>198 West 21th Street, Suite 721 New York NY 10016</p>
+						<p style="color: white;">Hno.46 Kahlon Garden City Vrindavan Sector-12, Lucknow, Uttar Pradesh,
+							India 226029</p>
 					</div>
 				</div>
 				<div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -666,7 +674,7 @@
 							<span class="icon-phone2"></span>
 						</div>
 						<h3 class="mb-4">Contact Number</h3>
-						<p><a href="tel://1234567920">+ 1235 2355 98</a></p>
+						<p><a href="tel://1234567920">+91-6388700793</a></p>
 					</div>
 				</div>
 				<div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -675,16 +683,16 @@
 							<span class="icon-paper-plane"></span>
 						</div>
 						<h3 class="mb-4">Email Address</h3>
-						<p><a href="mailto:info@yoursite.com">info@yoursite.com</a></p>
+						<p><a href="mailto:akanksham0401@gmail.com">akanksham0401@gmail.com</a></p>
 					</div>
 				</div>
 				<div class="col-md-6 col-lg-3 d-flex ftco-animate">
 					<div class="align-self-stretch box p-4 text-center">
 						<div class="icon d-flex align-items-center justify-content-center">
-							<span class="icon-globe"></span>
+							<span class="icon-linkedin"></span>
 						</div>
-						<h3 class="mb-4">Website</h3>
-						<p><a href="#">yoursite.com</a></p>
+						<h3 class="mb-4">Linkedin</h3>
+						<p><a href="http://www.linkedin.com/in/am0401" target="_blank">linkedin.com/am0401</a></p>
 					</div>
 				</div>
 			</div>
@@ -729,9 +737,9 @@
 						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
 							there live the blind texts.</p>
 						<ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-							<li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
+							<li class="ftco-animate"><a href="#"><span class="icon-envelope"></span></a></li>
 							<li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-							<li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+							<li class="ftco-animate"><a href="#"><span class="icon-linkedin"></span></a></li>
 						</ul>
 					</div>
 				</div>
@@ -766,8 +774,8 @@
 							<ul>
 								<li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain
 										View, San Francisco, California, USA</span></li>
-								<li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929
-											210</span></a></li>
+								<li><a href="#"><span class="icon icon-phone"></span><span
+											class="text">+91-6388700793</span></a></li>
 								<li><a href="#"><span class="icon icon-envelope"></span><span
 											class="text">info@yourdomain.com</span></a></li>
 							</ul>
