--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 </head>
 
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
+	<!-- hitwebcounter Code START -->
 
 
 	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
@@ -44,9 +45,18 @@
 					<li class="nav-item"><a href="#skills-section" class="nav-link"><span>Skills</span></a></li>
 					<li class="nav-item"><a href="#blog-section" class="nav-link"><span>Projects</span></a></li>
 					<li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
+
+
 				</ul>
+
+
 			</div>
+
 		</div>
+		<!-- hitwebcounter Code START -->
+		<a href="https://www.hitwebcounter.com" target="_blank">
+			<img src="https://hitwebcounter.com/counter/counter.php?page=11293091&style=0038&nbdigits=5&type=ip&initCount=0"
+				title="Counter Widget" Alt="Visit counter For Websites" border="0" /></a>
 	</nav>
 	<section id="home-section" class="hero">
 		<div class="home-slider  owl-carousel">
@@ -65,8 +75,10 @@
 								<span class="subheading">Hello!</span>
 								<h1 class="mb-4 mt-3">I'm <span>Akanksha Mishra</span></h1>
 								<h2 class="mb-4">A Software Developer</h2>
-								<p><a href="#contact-section" class="btn btn-primary py-3 px-4">Hire me</a> <a
-										href="#about-section" class="btn btn-white btn-outline-white py-3 px-4">More
+								<p><a href="images/AkankshaMishraResume.pdf" target="_blank"
+										class="btn btn-primary py-3 px-3 "><i class="fa fa-download"></i>Download
+										CV</a> <a href="#about-section"
+										class="btn btn-white btn-outline-white py-3 px-4">More
 										About Me</a></p>
 							</div>
 						</div>
@@ -90,7 +102,7 @@
 								<h1 class="mb-4 mt-3">I'm a <span>Software Developer</span>
 									based
 									in India</h1>
-								<p><a href="#contact-section" class="btn btn-primary py-3 px-4">Hire me</a> <a
+								<p><a href="#contact-section" class="btn btn-primary py-3 px-4">Hire Me</a> <a
 										href="#about-section" class="btn btn-white btn-outline-white py-3 px-4">More
 										About Me</a></p>
 							</div>
@@ -218,7 +230,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-4 text-center d-flex ftco-animate">
-					<a href="#" class="services-1">
+					<a href="#" class="services-1 ">
 						<span class="icon">
 							<img src="images/microsoft.png" height="50px"> </span>
 						<div class="desc">
@@ -732,30 +744,16 @@
 
 		<div class="container">
 
-			<div class="row mx-md-n5">
-				<div class="ftco-footer-widget ">
 
-					<ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-						<li class="ftco-animate"><a href="#"><span class="icon-envelope"></span></a></li>
-						<li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-						<li class="ftco-animate"><a href="#"><span class="icon-linkedin"></span></a></li>
-						<li></li>
-					</ul>
-				</div>
-				<div class="col-md-12 text-center">
-					<div class="row mb-10">
-						<p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-							Copyright &copy;
-							<script>document.write(new Date().getFullYear());</script> All rights reserved | Made with
-							<i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="#">Akanksha
-								Mishra</a>
-							<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-						</p>
-					</div>
-				</div>
+			<div class="ftco-footer-widget d-flex justify-content-center mt-5">
+
+				<ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-0">
+					<li class="ftco-animate"><a href="#"><span class="icon-envelope"></span></a></li>
+					<li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
+					<li class="ftco-animate"><a href="#"><span class="icon-linkedin"></span></a></li>
+					<li></li>
+				</ul>
 			</div>
-
-
 
 		</div>
 	</footer>
