--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
 					<li class="nav-item"><a href="#skills-section" class="nav-link"><span>Skills</span></a></li>
 					<li class="nav-item"><a href="#blog-section" class="nav-link"><span>Projects</span></a></li>
 					<li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
-
+					<a href="https://www.hitwebcounter.com" target="_blank">
+						<img src="https://hitwebcounter.com/counter/counter.php?page=11294185&style=0025&nbdigits=5&type=ip&initCount=1"
+							title="Counter Widget" Alt="Visit counter For Websites" border="0" /></a>
 
 				</ul>
 
@@ -54,9 +56,8 @@
 
 		</div>
 		<!-- hitwebcounter Code START -->
-		<a href="https://www.hitwebcounter.com" target="_blank">
-			<img src="https://hitwebcounter.com/counter/counter.php?page=11293936&style=0038&nbdigits=5&type=ip&initCount=0"
-				title="Counter Widget" Alt="Visit counter For Websites" border="0" /></a>
+		<!-- hitwebcounter Code START -->
+
 	</nav>
 	<section id="home-section" class="hero">
 		<div class="home-slider  owl-carousel">
