--- a/index.html
+++ b/index.html
@@ -573,7 +573,9 @@
 
 								</p>
 							</div>
-							<h3 class="heading"><a href="single.html">Cryptocurrency Tracking and Analysis</a>
+							<h3 class="heading"><a
+									href="https://github.com/Akanksha0401/CryptoTrackerWebApp">Cryptocurrency Tracking
+									and Analysis</a>
 							</h3>
 							<p>A versatile cryptocurrency tracking and analysis app which provides the latest crypto
 								trends as well as provides the individual historical records of past dips and rise in
