--- a/index.html
+++ b/index.html
@@ -543,7 +543,8 @@
 			<div class="row d-flex">
 				<div class="col-md-4 d-flex ftco-animate">
 					<div class="blog-entry justify-content-end">
-						<a href="single.html" class="block-20" style="background-image: url('images/project2.webp');">
+						<a href="https://github.com/Akanksha0401/engage2k22" class="block-20"
+							style="background-image: url('images/project2.webp');">
 						</a>
 						<div class="text mt-3 float-right d-block">
 							<div class="d-flex align-items-center mb-3 meta">
@@ -564,7 +565,8 @@
 				</div>
 				<div class="col-md-4 d-flex ftco-animate">
 					<div class="blog-entry justify-content-end">
-						<a href="single.html" class="block-20" style="background-image: url('images/project3.png');">
+						<a href="https://github.com/Akanksha0401/CryptoTrackerWebApp" class="block-20"
+							style="background-image: url('images/project3.png');">
 						</a>
 						<div class="text mt-3 float-right d-block">
 							<div class="d-flex align-items-center mb-3 meta">
@@ -585,7 +587,8 @@
 				</div>
 				<div class="col-md-4 d-flex ftco-animate">
 					<div class="blog-entry">
-						<a href="single.html" class="block-20" style="background-image: url('images/Project1.jpg');">
+						<a href="https://github.com/Akanksha0401/AR-Furniture-E-commerce-website" class="block-20"
+							style="background-image: url('images/Project1.jpg');">
 						</a>
 						<div class="text mt-3 float-right d-block">
 							<div class="d-flex align-items-center mb-3 meta">
