--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
 			<div class="row d-flex">
 				<div class="col-md-4 d-flex ftco-animate">
 					<div class="blog-entry justify-content-end">
-						<a href="https://github.com/Akanksha0401/engage2k22" class="block-20"
+						<a href="https://github.com/Akanksha0401/engage2k22" target="_blank" class="block-20"
 							style="background-image: url('images/project2.webp');">
 						</a>
 						<div class="text mt-3 float-right d-block">
@@ -565,7 +565,7 @@
 				</div>
 				<div class="col-md-4 d-flex ftco-animate">
 					<div class="blog-entry justify-content-end">
-						<a href="https://github.com/Akanksha0401/CryptoTrackerWebApp" class="block-20"
+						<a href="https://github.com/Akanksha0401/CryptoTrackerWebApp" target="_blank" class="block-20"
 							style="background-image: url('images/project3.png');">
 						</a>
 						<div class="text mt-3 float-right d-block">
@@ -575,8 +575,8 @@
 
 								</p>
 							</div>
-							<h3 class="heading"><a
-									href="https://github.com/Akanksha0401/CryptoTrackerWebApp">Cryptocurrency Tracking
+							<h3 class="heading"><a href="https://github.com/Akanksha0401/CryptoTrackerWebApp"
+									target="_blank">Cryptocurrency Tracking
 									and Analysis</a>
 							</h3>
 							<p>A versatile cryptocurrency tracking and analysis app which provides the latest crypto
@@ -587,8 +587,8 @@
 				</div>
 				<div class="col-md-4 d-flex ftco-animate">
 					<div class="blog-entry">
-						<a href="https://github.com/Akanksha0401/AR-Furniture-E-commerce-website" class="block-20"
-							style="background-image: url('images/Project1.jpg');">
+						<a href="https://github.com/Akanksha0401/AR-Furniture-E-commerce-website" target="_blank"
+							class="block-20" style="background-image: url('images/Project1.jpg');">
 						</a>
 						<div class="text mt-3 float-right d-block">
 							<div class="d-flex align-items-center mb-3 meta">
