--- a/index.html
+++ b/index.html
@@ -754,9 +754,12 @@
 			<div class="ftco-footer-widget d-flex justify-content-center mt-5">
 
 				<ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-0">
-					<li class="ftco-animate"><a href="#"><span class="icon-envelope"></span></a></li>
-					<li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-					<li class="ftco-animate"><a href="#"><span class="icon-linkedin"></span></a></li>
+					<li class="ftco-animate"><a href="mailto:akanksham0401@gmail.com"><span
+								class="icon-envelope"></span></a></li>
+					<li class="ftco-animate"><a href="https://github.com/Akanksha0401"><span
+								class="icon-github"></span></a></li>
+					<li class="ftco-animate"><a href="https://www.linkedin.com/in/am0401/" target="_blank"><span
+								class="icon-linkedin"></span></a></li>
 					<li></li>
 				</ul>
 			</div>
