--- a/index.html
+++ b/index.html
@@ -756,7 +756,7 @@
 				<ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-0">
 					<li class="ftco-animate"><a href="mailto:akanksham0401@gmail.com"><span
 								class="icon-envelope"></span></a></li>
-					<li class="ftco-animate"><a href="https://github.com/Akanksha0401"><span
+					<li class="ftco-animate"><a href="https://github.com/Akanksha0401" target="_blank"><span
 								class="icon-github"></span></a></li>
 					<li class="ftco-animate"><a href="https://www.linkedin.com/in/am0401/" target="_blank"><span
 								class="icon-linkedin"></span></a></li>
